Registers last version of the plugin from the update-center